реализовал классы Task, Epic, SubTask, TaskManager и перечисление Status. В классе Main ротестировал работу